Manuel Deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchbase-cluster-ui
  namespace: couchbase-cluster
  labels:
    app.kubernetes.io/component: couchbase-server
    app.kubernetes.io/name: couchbase-ui
  annotations: {}
    # nginx.ingress.kubernetes.io/affinity: "cookie"
    # nginx.ingress.kubernetes.io/session-cookie-name: "http-cookie"
    # nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    # nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    #certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    # kubernetes.io/ingress.class: "nginx"
    #kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: hostname.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couchbase-cluster-ui
                port:
                  number: 8091
